Gameboard cells have their own array
This is done so that the CPU can properly place ships on its own board.
Should make certain functions easier to implement later.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Battleship!</title>
 </head>
 <body>
+    <span id="error"></span>
     <span id="instructions"></span>
 </body>
 </html>
